resolved webpack issues

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="root"></div>
     <script src="./build/bundle.js"></script>
+    <script src="./build/runtime.js"></script>
+    <script src="./build/vendor.js"></script>
   </body>
 </html>
